--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,8 @@
                 <p class="duration">60 минут</p>
             </div>
         </div>
+    </div>
+    <div id="services" class="content-block">    
         <div class="container">
             <h1>Контакты</h1>
             <div class="contacts-block">
@@ -64,6 +66,7 @@
             </div>
         </div>
     </div>
+    
 
     <div class="gallery">
         <table class="gallery_menu">
